# component-system-test

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
components/colorchanger/: CMakeLists.txt  ColorChangerComponent.cpp  ColorChangerComponent.h  ColorChangerSpec.h  ColorChangerWidget.cpp  ColorChangerWidget.h  metadata.json.in
components/counter/: CMakeLists.txt  CounterComponent.cpp  CounterComponent.h  CounterSpec.h  CounterWidget.cpp  metadata.json  metadata.json.in
components/qml_counter/: CMakeLists.txt  QMLCounterComponent.cpp  QMLCounterComponent.h  counter.qml  metadata.json  qml_counter.json  resources.qrc
interfaces/: CMakeLists.txt  IComponent.h
mainapp/: CMakeLists.txt  IComponent.h  MainWindow.cpp  MainWindow.h  main.cpp
